// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    id: 'App.Components.Greeting.hello',
    defaultMessage: 'id',
    description: 'describe text for translation'
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  new: {
    'id': 'GSplhw==',

    defaultMessage: 'id',
    description: 'describe text for translation'
  }
});
"
`;

exports[`basic 2`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    defaultMessage: 'missing id',
    description: 'should not fail when id is missing'
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  new: {
    defaultMessage: 'missing id',
    description: 'should not fail when id is missing'
  }
});
"
`;

exports[`basic 3`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    id: 'App.Components.Greeting.hello',
    defaultMessage: 'id',
    description: 'describe text for translation'
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  new: {
    'id': 'GSplhw==',

    defaultMessage: 'id',
    description: 'describe text for translation'
  }
});
"
`;

exports[`basic 4`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    defaultMessage: 'missing id',
    description: 'should not fail when id is missing'
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  new: {
    defaultMessage: 'missing id',
    description: 'should not fail when id is missing'
  }
});
"
`;
